--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,18 +3,18 @@
 
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="../../../assets/images/mario.jpg" alt="Logo" width="75" height="50">
+            <img src="../../../assets/images/angularlogo.png" alt="Logo" width="75" height="50">
         </a>
     </div>
 
     <div class="container-fluid">
-        <a class="navbar-brand" routerLink="inicio">Goty</a>
+        <a class="navbar-brand" routerLink="inicio"></a>
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="inicio" routerLinkActive="active">Inicio</a>
+                    <a class="nav-link" routerLink="inicio" routerLinkActive="active">Resultados</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="goty" routerLinkActive="active">Votar</a>
